@@ -1,4 +1,5 @@
 Development
+	Remember softvol option patch by smoohta
 	Updated Czech translation
 	Fix problem with playlist detection on glib < 2.22
 	Add Hungarian translation
